# stratax

./: CMakeLists.txt  Makefile  README.md
shaders/: shader.frag  shader.vert  triangle.frag  triangle.vert
src/: app.h  camera.c  camera.h  main.c  material.c  material.h  model.c  model.h  texture.c
src/core/: defines.h  fs.c  fs.h  logger.c  logger.h  memory.c  memory.h
src/vk/: vk_buffer.c  vk_buffer.h  vk_device.c  vk_device.h  vk_image.c  vk_image.h  vk_mesh.c  vk_mesh.h  vk_pipeline.c  vk_swapchain.c  vk_swapchain.h  vk_types.h
src/vk/pipeline/: pipeline.c  pipeline.h
